@@ -1,0 +1,49 @@
+#
+# Check session doesn't have any file descriptors to the daemon open.
+# Use a greeter so its file descriptors are around at the time the session starts.
+#
+
+[test-greeter-config]
+username=alice
+password=password
+
+[test-session-config]
+list-unknown-file-descriptors=true
+
+#?RUNNER DAEMON-START
+
+# X server starts
+#?XSERVER :50 START
+#?XSERVER :50 INDICATE-READY
+
+# LightDM connects to X server
+#?XSERVER :50 ACCEPT-CONNECT
+
+# Greeter starts
+#?GREETER START
+#?XSERVER :50 ACCEPT-CONNECT
+#?GREETER CONNECT-XSERVER :50
+#?GREETER CONNECT-TO-DAEMON
+#?GREETER CONNECTED-TO-DAEMON
+
+# Login as alice
+#?GREETER AUTHENTICATE USERNAME=alice
+#?GREETER SHOW-PROMPT TEXT="Password:"
+#?GREETER RESPOND TEXT="password"
+#?GREETER AUTHENTICATION-COMPLETE USERNAME=alice AUTHENTICATED=TRUE
+#?GREETER TERMINATE SIGNAL=15
+
+# Session starts
+#?SESSION START USER=alice
+#?XSERVER :50 ACCEPT-CONNECT
+#?SESSION CONNECT-XSERVER
+
+# Check file descriptors
+#?SESSION LIST-UNKNOWN-FILE-DESCRIPTORS FDS=
+
+# Cleanup
+#?*STOP-DAEMON
+# Don't know what order they will terminate
+#?(SESSION TERMINATE SIGNAL=15|XSERVER :50 TERMINATE SIGNAL=15)
+#?(SESSION TERMINATE SIGNAL=15|XSERVER :50 TERMINATE SIGNAL=15)
+#?RUNNER DAEMON-EXIT STATUS=0
